--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus,
       accusantium totam odit minima repudiandae aut explicabo impedit. Magnam
       vero adipisci sunt voluptas reiciendis, ipsam sit explicabo eaque non
-      dolor maxime?
+      dolor maxime? this is how you do your website!
     </p>
     <span style="font-size: 100px">&#128151;</span>
     <p><span>&#9757;&#127998;</span></p>
